clases leer y escribir csv
Correciones generales, arbol binario y leer y escribir csv

--- a/ProyectoEstructura/pom.xml
+++ b/ProyectoEstructura/pom.xml
@@ -21,5 +21,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version> <!-- Verifica la versión actual -->
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 </project>
